--- a/app/views/shop/index.html.erb
+++ b/app/views/shop/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Shop#index</h1>
-<p>Find me in app/views/shop/index.html.erb</p>
+<h1>Witaj w moim sklepie</h1>
+
+<p>
+  Lista dostępnych produktów:
+  <ul>
+    <% @products.each do |product| %>
+        <li>
+          <%= product.name %>
+          - <a href="/products/<%= product.id %>">Zobacz</a>
+        </li>
+    <% end %>
+  </ul>
+</p>
